// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CasesFlyoutJsonProps should render error if input is null 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="euiPanel euiPanel--danger euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge emotion-euiPanel-m-danger"
        data-test-subj="indicatorEmptyPrompt"
      >
        <div
          class="euiEmptyPrompt__main"
        >
          <div
            class="euiEmptyPrompt__icon"
          >
            <span
              color="danger"
              data-euiicon-type="alert"
            />
          </div>
          <div
            class="euiEmptyPrompt__content"
          >
            <div
              class="euiEmptyPrompt__contentInner"
            >
              <h2
                class="euiTitle emotion-euiTitle-m"
              >
                Unable to display indicator information
              </h2>
              <div
                class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
              />
              <div
                class="euiText emotion-euiText-m-euiTextColor-subdued"
              >
                <p>
                  There was an error displaying the indicator fields and values.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="euiPanel euiPanel--danger euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge emotion-euiPanel-m-danger"
      data-test-subj="indicatorEmptyPrompt"
    >
      <div
        class="euiEmptyPrompt__main"
      >
        <div
          class="euiEmptyPrompt__icon"
        >
          <span
            color="danger"
            data-euiicon-type="alert"
          />
        </div>
        <div
          class="euiEmptyPrompt__content"
        >
          <div
            class="euiEmptyPrompt__contentInner"
          >
            <h2
              class="euiTitle emotion-euiTitle-m"
            >
              Unable to display indicator information
            </h2>
            <div
              class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
            />
            <div
              class="euiText emotion-euiText-m-euiTextColor-subdued"
            >
              <p>
                There was an error displaying the indicator fields and values.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CasesFlyoutJsonProps should render json 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h2
        class="euiTitle emotion-euiTitle-m"
      >
        abc
      </h2>
      <div>
        <pre>
          <code
            data-code-language="json"
            data-test-subj="tiCasesFlyoutJsonCodeBlock"
          >
            {
  "prop1": "prop1",
  "prop2": "prop2"
}
          </code>
        </pre>
      </div>
    </div>
  </body>,
  "container": <div>
    <h2
      class="euiTitle emotion-euiTitle-m"
    >
      abc
    </h2>
    <div>
      <pre>
        <code
          data-code-language="json"
          data-test-subj="tiCasesFlyoutJsonCodeBlock"
        >
          {
  "prop1": "prop1",
  "prop2": "prop2"
}
        </code>
      </pre>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
